src/objects/cec_Alert_Tracker_Item__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CEC : Checked by default. Unchecked if this record is more than 30 days old for the alert rule where 30 days limit is checked.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Rule_Id__c</fullName>
        <description>CEC: refers to cec_Alert_Rule__c &quot;Id&quot; field</description>
        <formula>CASESAFEID(Alert_Tracker_Id__r.Alert_Rule_Id__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Rule Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Tracker_Id__c</fullName>
        <label>Alert Tracker</label>
        <referenceTo>cec_Alert_Tracker__c</referenceTo>
        <relationshipLabel>Alert Tracker Item</relationshipLabel>
        <relationshipName>Alert_Tracker_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Alert Tracker Item</relationshipLabel>
        <relationshipName>Alert_Tracker_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alert Tracker Item</label>
    <nameField>
        <displayFormat>TI-{000000}</displayFormat>
        <label>Alert Tracker Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert Tracker Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>